[gd_scene load_steps=6 format=3 uid="uid://e7tld003y8ip"]

[ext_resource type="Script" path="res://Scenes/actor.gd" id="1_u5gb3"]
[ext_resource type="Texture2D" uid="uid://dn71q2wwibfv6" path="res://icon.svg" id="2_78aau"]

[sub_resource type="Gradient" id="Gradient_e3mqp"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 0.811765)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nbw60"]
gradient = SubResource("Gradient_e3mqp")
width = 32
height = 32

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7r47"]
size = Vector2(24, 24)

[node name="Actor" type="Area2D"]
script = ExtResource("1_u5gb3")

[node name="Target" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_nbw60")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7.15256e-07, -7.15256e-07)
scale = Vector2(0.1875, 0.1875)
texture = ExtResource("2_78aau")

[node name="MaskSprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e7r47")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
